--- a/tutorial4/website/templates/recycle.html
+++ b/tutorial4/website/templates/recycle.html
@@ -1,10 +1,15 @@
-{% extends "base.html" %} {% block title %}Recycling Tracker{% endblock %} {% block
-  content %}
+{% extends "base.html" %}
+{% block title %}Recycling Tracker{% endblock %}
+{% block content %}
 
-  <div class="container">
+<div class="container">
     <h2 class="mt-5">Track Recycling Effort</h2>
-    <form id="recycleForm" method="post" action="{{ url_for('track_recycling') }}">
+    <form id="recycleForm" method="post" action="{{ url_for('auth.track_recycling') }}">
         {{ form.hidden_tag() }}
+        <div class="form-group">
+            <label for="user_id">User</label>
+            {{ form.user_id(class="form-control") }}
+        </div>
         <div class="form-group">
             <label for="date">Date</label>
             {{ form.date(class="form-control") }}
@@ -13,7 +18,12 @@
             <label for="materials">Recycled Materials</label>
             {{ form.materials(class="form-control") }}
         </div>
+        <div class="form-group">
+            <label for="status">Status</label>
+            {{ form.status(class="form-control") }}
+        </div>
         <button type="submit" class="btn btn-primary">Track Recycling</button>
     </form>
 </div>
-  {% endblock %}
+
+{% endblock %}
